--- a/demos/Adversairal Training (MNIST).ipynb
+++ b/demos/Adversairal Training (MNIST).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo - Adversarial Training (MNIST)"
+    "# Adversarial Training (MNIST)"
    ]
   },
   {
@@ -26,6 +26,7 @@
     "import torchvision.datasets as dsets\n",
     "import torchvision.transforms as transforms\n",
     "\n",
+    "sys.path.append('../')\n",
     "import torchattacks\n",
     "from torchattacks import PGD, FGSM\n",
     "\n",
@@ -84,6 +85,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "\n",
+    "# default `log_dir` is \"runs\" - we'll be more specific here\n",
+    "writer = SummaryWriter('runs/fashion_mnist_experiment_2')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataiter = iter(train_loader)\n",
+    "images_, labels_ = dataiter.next()\n",
+    "writer.add_graph(model, images_.cuda())\n",
+    "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,35 +161,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Epoch [1/5], lter [100/468], Loss: 2.2063\n",
-      "Epoch [1/5], lter [200/468], Loss: 1.8595\n",
-      "Epoch [1/5], lter [300/468], Loss: 1.8766\n",
-      "Epoch [1/5], lter [400/468], Loss: 1.6352\n",
-      "Epoch [2/5], lter [100/468], Loss: 1.4859\n",
-      "Epoch [2/5], lter [200/468], Loss: 1.1941\n",
-      "Epoch [2/5], lter [300/468], Loss: 1.4796\n",
-      "Epoch [2/5], lter [400/468], Loss: 1.1723\n",
-      "Epoch [3/5], lter [100/468], Loss: 1.0888\n",
-      "Epoch [3/5], lter [200/468], Loss: 0.8527\n",
-      "Epoch [3/5], lter [300/468], Loss: 1.0899\n",
-      "Epoch [3/5], lter [400/468], Loss: 0.8288\n",
-      "Epoch [4/5], lter [100/468], Loss: 0.9201\n",
-      "Epoch [4/5], lter [200/468], Loss: 0.6490\n",
-      "Epoch [4/5], lter [300/468], Loss: 0.8750\n",
-      "Epoch [4/5], lter [400/468], Loss: 0.6238\n",
-      "Epoch [5/5], lter [100/468], Loss: 0.7873\n",
-      "Epoch [5/5], lter [200/468], Loss: 0.5471\n",
-      "Epoch [5/5], lter [300/468], Loss: 0.8011\n",
-      "Epoch [5/5], lter [400/468], Loss: 0.5021\n"
+      "Epoch [1/5], lter [100/468], Loss: 2.3006\n",
+      "Epoch [1/5], lter [200/468], Loss: 1.9744\n",
+      "Epoch [1/5], lter [300/468], Loss: 1.9792\n",
+      "Epoch [1/5], lter [400/468], Loss: 1.6930\n",
+      "Epoch [2/5], lter [100/468], Loss: 1.4805\n",
+      "Epoch [2/5], lter [200/468], Loss: 1.0964\n",
+      "Epoch [2/5], lter [300/468], Loss: 1.2835\n",
+      "Epoch [2/5], lter [400/468], Loss: 0.9793\n",
+      "Epoch [3/5], lter [100/468], Loss: 0.9223\n",
+      "Epoch [3/5], lter [200/468], Loss: 0.7279\n",
+      "Epoch [3/5], lter [300/468], Loss: 0.8633\n",
+      "Epoch [3/5], lter [400/468], Loss: 0.6866\n",
+      "Epoch [4/5], lter [100/468], Loss: 0.7376\n",
+      "Epoch [4/5], lter [200/468], Loss: 0.5594\n",
+      "Epoch [4/5], lter [300/468], Loss: 0.7234\n",
+      "Epoch [4/5], lter [400/468], Loss: 0.5792\n",
+      "Epoch [5/5], lter [100/468], Loss: 0.6386\n",
+      "Epoch [5/5], lter [200/468], Loss: 0.5103\n",
+      "Epoch [5/5], lter [300/468], Loss: 0.6679\n",
+      "Epoch [5/5], lter [400/468], Loss: 0.5411\n"
      ]
     }
    ],
@@ -205,17 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Standard accuracy: 96.14 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.eval()\n",
     "\n",
@@ -244,17 +261,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Robust accuracy: 85.22 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.eval()\n",
     "\n",
@@ -275,13 +284,20 @@
     "    \n",
     "print('Robust accuracy: %.2f %%' % (100 * float(correct) / total))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml-env",
    "language": "python",
-   "name": "python3"
+   "name": "ml-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -293,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.5-final"
   }
  },
  "nbformat": 4,
