--- a/demos/Applications of MultiAttack (CIFAR10).ipynb
+++ b/demos/Applications of MultiAttack (CIFAR10).ipynb
@@ -27,6 +27,7 @@
     "import torchvision.datasets as dsets\n",
     "import torchvision.transforms as transforms\n",
     "\n",
+    "sys.path.append('../')\n",
     "import torchattacks\n",
     "\n",
     "from models import Target"
@@ -38,8 +39,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Files already downloaded and verified\n"
      ]
@@ -238,9 +239,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml-env",
    "language": "python",
-   "name": "python3"
+   "name": "ml-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -252,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.5-final"
   }
  },
  "nbformat": 4,
